--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-bitcoin-seeder
+cpuchain-seeder
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
+CPUchain-seeder is a crawler for the CPUchain network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
